# skuf

./: .env  .gitignore  INSTALL.md  Makefile  README.md  SETUP_AFTER_PYTHON_UPDATE.md  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
examples/: async_generator_uow.py  async_worker_example.py  configuration_factory_example.py  context_manager_factory_example.py  factory_examples_README.md  factory_pattern_example.py  fastapi_style_uow.py  microservice_example.py  uow_example.py  web_api_example.py
skuf/: __init__.py  core.py  settings.py
skuf.egg-info/: PKG-INFO  SOURCES.txt
skuf/dependency/: __init__.py  injector.py  inspector.py  registry.py  types.py  wrapper.py
skuf/settings_module/: __init__.py  base.py  loader.py  parser.py
tests/: __init__.py  conftest.py  test_async_generator.py  test_container.py  test_context_managers.py  test_dependency.py  test_injector.py  test_inspector.py  test_registry.py  test_settings.py  test_types.py  test_wrapper.py
