[project]
name = "skuf"
version = "0.2.1"
description = "Minimal Dependency Injection & Configuration Framework for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tsunami43", email = "n3m0_22@mail.ru"}
]
keywords = ["di", "dependency-injection", "container", "python", "env"]

[project.urls]
Homepage = "https://github.com/Tsunami43/skuf.git"
Repository = "https://github.com/Tsunami43/skuf.git"
Issues = "https://github.com/Tsunami43/skuf/issues"

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.12.4",
]
